syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/integrations_faceit";
package messages.integrations_faceit;

message GetAuthLink {
	string link = 1;
}

message GetDataResponse {
	optional string user_name = 1;
	optional string avatar = 2;
	optional string game = 3;
}

message PostCodeRequest {
	string code = 1;
}

message UpdateDataRequest {
	string game = 1;
}
